--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "web-services",
+  "name": "ws-testing",
   "version": "1.0.0",
   "description": "Test web-services",
   "main": "index.js",
@@ -11,13 +11,15 @@
     "rest",
     "service"
   ],
-  "author": "Volha Shut",
+  "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.25.0",
     "chai": "^4.1.2",
     "mocha": "^5.0.0",
     "mochawesome": "^3.0.2",
-    "request": "^2.83.0",
-    "request-promise-native": "^1.0.5"
+    "request": "^2.88.2",
+    "request-promise": "^4.2.6",
+    "request-promise-native": "^1.0.9"
   }
 }
